--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,18 @@
-version: '3'
 
 services:
   mongo:
     image: mongo
+    environment:
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
+      - TZ=Europe/Moscow
+    volumes:
+      - ./data/db:/data/db
   syslogcollector:
     image: ciscoliveru/syslogcollector
     environment:
-      MONGOURL: mongodb://mongo:27017
+      - MONGOURL=mongodb://mongo:27017
+      - TZ=Europe/Moscow
     depends_on:
       - mongo
     ports:
@@ -14,7 +20,8 @@ services:
   syslogapi:
     image: ciscoliveru/syslogapi
     environment:
-      MONGOURL: mongodb://mongo:27017
+      - MONGOURL=mongodb://mongo:27017
+      - TZ=Europe/Moscow
     depends_on:
       - mongo
     ports:
